css/screen.css
* {
  border-radius: 0;
  box-sizing: border-box;
  color: inherit;
  font-family: inherit;
}

html {
  background-attachment: fixed;
  background-image: url('/img/bg.jpg');
  background-position: 50%;
  background-size: cover;
  overflow: auto scroll;
  scrollbar-color: dimgray rgba(0, 0, 0, .89);

  line-height: 1.4;
  margin: 0;
  padding: 0;
}

body {
  background: rgba(0, 0, 0, .89);
  border-bottom: .25em solid gold;
  color: ivory;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

main {
  padding: 1em 1em 4em;
  margin: 0 auto;
  max-width: 37em;
}

main > * + * {
  margin-top: 2em;
}

main > header h1 {
  font-size: 2em;
  margin-top: 0;
  text-align: right;
}

main > article {
  min-height: 7em;
}

h1, h2, h3, h4, strong, em, a {
  color: white;
}

h1 {
  font-variant: small-caps;
}

a:hover {
  text-decoration: underline double gold;
}

hr {
  border: none;
  border-top: dotted;
  color: inherit;
  margin: 2em 0;
}

form {
  display: none;
}

fieldset {
  border: 1px solid;
  display: inline-flex;
  margin: 0;
  padding: 0;
}
fieldset + fieldset {
  margin-left: .5em;
}
fieldset button,
fieldset input,
fieldset select {
  border: none;
}
fieldset button + button,
fieldset input + input,
fieldset input + button,
fieldset input + select,
fieldset select + input,
fieldset select + select,
fieldset select + button,
fieldset button + select,
fieldset button + input {
  border-left: 1px dotted;
}

button, [role=button], input, select {
  border: 1px solid;
  font-size: .8em;
  height: 2em;
  line-height: inherit;
  padding: .15em .5em;
}
nav button, nav [role=button], nav input {
  font-size: 1em;
}

button, [role=button], select {
  background: dimgray;
  color: ivory;
  cursor: pointer;
  font-variant: small-caps;
  text-decoration: none;
  user-select: none;
}
button:disabled, select:disabled {
  border-color: ivory;
  color: darkgray;
}
button:hover, [role=button]:hover {
  background: gold;
}
button:disabled:hover{
  background: dimgray;
}
button[name=trash]:hover, button[name=purge]:hover {
  background: red;
  color: white;
}

input {
  background: transparent;
}
input:focus {
  background: dimgray;
}

select[name=extension] {
  font-variant: normal;
}

:disabled {
  cursor: default;
}

/***/

body {
  --ck-border-radius: 0;
  --ck-color-focus-border: gold;
  --ck-color-focus-outer-shadow: none;
  --ck-color-focus-inner-shadow: none;
  --ck-color-text: ivory;
  --ck-color-toolbar-background: black;
  --ck-color-toolbar-border: ivory;
  --ck-color-button-default-hover-background: gold;
  --ck-color-button-on-background: dimgray;
  --ck-color-button-on-hover-background: darkgray;
  --ck-color-dropdown-panel-background: black;
  --ck-color-input-background: black;
  --ck-color-list-background: black;
  --ck-color-list-button-hover-background: gold;
  --ck-color-list-button-on-background: dimgray;
  --ck-color-list-button-on-background-focus: gold;
  --ck-color-panel-background: black;
  --ck-color-panel-border: ivory;
  --ck-color-link-default: white;
  --ck-color-link-selected-background: gold;
  --ck-focus-inner-shadow: none;
  --ck-focus-outer-shadow: none;
  --ck-focus-ring: 1px solid ivory;
}

article.ck-content blockquote {
  border-left-color: gold;
  font-style: normal;
}
article.ck-focused {
  background: black;
}

.ck-balloon-panel {
  transform: translate(-1em, 1em);
}

/***/

.alertify-notifier .ajs-message {
  background: black;
  border: 1px solid;
  border-radius: 0;
  color: ivory;
  display: inline-block;
  font-variant: small-caps;
  padding: .5em .62em .5em .5em !important;
  width: auto !important;
  white-space: nowrap;
}
.alertify-notifier .ajs-message.ajs-success {
  background: dimgray;
  color: white;
}
.alertify-notifier .ajs-message.ajs-error {
  background: red;
  color: white;
}
.alertify-notifier .ajs-message.ajs-warning {
  background: gold;
  color: white;
}

.alertify-notifier .ajs-message:before {
  content: '🛈';
  padding-right: .5em;
}
.alertify-notifier .ajs-message.ajs-success:before {
  content: '☑';
}
.alertify-notifier .ajs-message.ajs-warning:before {
  content: '⚠';
}
.alertify-notifier .ajs-message.ajs-error:before {
  content: '☒';
}

